<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/HelloW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TextDescountMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/YouHaveDescount"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubscribeteAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="97dp"
        android:onClick="suscribeAndroid"
        android:text="@string/subscribeteAndroid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubscribeteFirebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:onClick="suscribeFirebase"
        android:text="@string/subscribeteFirebase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubscribeteAndroid" />

    <Button
        android:id="@+id/buttonUnSubscribeteAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/unSubscribeteAndroid"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSubscribeteAndroid"
        app:layout_constraintStart_toEndOf="@+id/buttonSubscribeteAndroid"
        android:onClick="unSuscribeAndroid"/>

    <Button
        android:id="@+id/buttonUnSubscribeteFirebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/unSubscribeteFirebase"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSubscribeteFirebase"
        app:layout_constraintStart_toEndOf="@+id/buttonSubscribeteFirebase"
        android:onClick="unSuscribeFirebase"/>

</android.support.constraint.ConstraintLayout>